@@ -11,16 +11,33 @@ div#column-content div#content {
 	margin-top: 3em;
 	height: 1%;
 }
+.rtl div#column-content div#content {
+	margin-right: 12.2em;
+	margin-left: 0;
+}
 div#column-one {
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 4;
 }
+.rtl div#column-one {
+	left: auto;
+	right: 0;
+}
 div#footer {
 	margin-left: 13.6em;
 	border-left: 1px solid #fabd23;
 }
+.rtl div#footer {
+	margin-left: 0;
+	margin-right: 13.6em;
+	border-left: none;
+	border-right: 1px solid #fabd23;
+}
+
+ /* the tabs */
+
 
 /* the tabs */
 
